[gd_scene load_steps=2 format=3 uid="uid://vfa63au3pvej"]

[ext_resource type="Script" path="res://Scripts/Grid.gd" id="1_y72uw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("1_y72uw")
width = 10
height = 10
x_start = 576
y_start = 324
offset = 32

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Refill_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="destroy_timer" to="Grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="Grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="Refill_timer" to="Grid" method="_on_refill_timer_timeout"]
